// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CONTENT VIEW renders a Content Component using defaultProps of white background 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#FFFFFF",
      "flex": 1,
    }
  }
/>
`;

exports[`CONTENT VIEW renders a Content Component using passed in prop of cyan background 1`] = `
<View
  style={
    Object {
      "backgroundColor": "cyan",
      "flex": 1,
    }
  }
/>
`;
